<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EZ Rent</string>
    <string name="picture">picture</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-Mail:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="register_as">Register as:</string>
    <string name="landlord">Landlord</string>
    <string name="tenant">" Tenant "</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="unit_number">Unit Number:</string>
    <string name="property_address">Property Address:</string>
    <string name="address">Address:</string>
    <string name="state">State:</string>
    <string name="city">City:</string>
    <string name="zip_code">Zip Code:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="property_name">Property Name:</string>
    <string name="welcome_message">Welcome to EZ Rent!</string>
    <string name="log_in_message">Please log in or register</string>
    <string name="error_invalid_email_or_password">Invalid e-mail or password.\nPlease try again.</string>
    <string name="error_invalid_phone_number">Invalid phone number. Should be a 10 digit number with no dashes or spaces.\nPlease try again.</string>
    <string name="error_fields_left_blank">One or more of the fields are empty, please fill in ALL fields and try again.</string>
    <string name="error_passwords_do_not_match">Passwords do not match. Please try again.</string>
    <string name="error_password_fields_left_blank">One of the change password fields are blank.</string>
    <string name="change_password_instructions">(leave fields empty to not change)</string>
    <string name="error_new_passwords_do_not_match">New passwords do not match. Please try again.</string>
    <string name="error_current_passwords_do_not_match">Password entered does not match your current password. Please try again.</string>
    <string name="error_password_length">Password is too short! Passwords must be at least 5 characters long. Please try again.</string>
    <string name="error_invald_email">E-Mail entered is not valid! Please try again.</string>
    <string name="error_email_exists">E-Mail entered already exists! Please try again.</string>
    <string name="error_number_of_units">Number of units must be non-negative! Please try again.</string>
    <string name="login_error">Log In Error!</string>
    <string name="tap">(tap image to view fullscreen)</string>
    <string name="register_error">Register Error!</string>
    <string name="edit_error">Edit Information Error!</string>
    <string name="edit_info">Edit Information</string>
    <string name="request_error">Maintenance Request Error!</string>
    <string name="error_no_landlord">Tenants cannot make a maintenance request without a landlord.</string>
    <string name="add_unit_error">Add Unit Error!</string>
    <string name="add_property_error">Add Property Error!</string>
    <string name="edit_password_error">Change Password Error!</string>
    <string name="number_of_units">Number of Units:</string>
    <string name="title_activity_landlord__register_">Landlord Register Page</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tenant__register_">Tenant Register Page</string>
    <string name="landlord_instructions">Please fill out all of the fields to register as a landlord.</string>
    <string name="tenant_instructions">Please fill out all of the fields to register as a tenant.</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="message_instructions">Detailed description of the problem.</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_activity_landlord_homepage">Landlord Homepage</string>
    <string name="title_activity_tenant_homepage">Tenant Homepage</string>
    <string name="messages_inbox">Message Inbox</string>
    <string name="maintenance_inbox">Maintenance Request Inbox</string>
    <string name="add_property">Add New Property</string>
    <string name="edit_information">Edit Landlord Info</string>
    <string name="edit_property_information">Edit Property Info</string>
    <string name="select">Select</string>
    <string name="back">Back</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="send">Send</string>
    <string name="property">Property</string>
    <string name="prop">Property:</string>
    <string name="sort">Sort by:</string>
    <string name="subject">Subject:</string>
    <string name="fixed">Read</string>
    <string name="tenant_name">Tenant Name:</string>
    <string name="home">Home</string>
    <string name="yes">Yes</string>
    <string name="reply">Reply</string>
    <string name="from">From:</string>
    <string name="request_id">Request ID:</string>
    <string name="message">Message:</string>
    <string name="lpar">(</string>
    <string name="rpar">)</string>
    <string name="landlord_name">Landlord Name:</string>
    <string name="landlord_email">Landlord E-Mail:</string>
    <string name="landlord_phone_number">Landlord Phone Number:</string>
    <string name="dollar">$</string>
    <string name="lease_start_date">Lease Start Date:</string>
    <string name="lease_end_date">Lease End Date:</string>
    <string name="miscellaneous_notes">Miscellaneous Notes</string>
    <string name="start_date">Lease Start Date (YYYY-MM-DD):</string>
    <string name="end_date">Lease End Date (YYYY-MM-DD):</string>
    <string name="inbox">Inbox</string>
    <string name="welcome">Tenant Homepage</string>
    <string name="make_request">Make Maintenance Request</string>
    <string name="back_properties">Back to Property Page</string>
    <string name="tenant_email">Tenant E-Mail:</string>
    <string name="tenant_phone_number">Tenant Phone Number:</string>
    <string name="monthly_rent">Monthly Rent:</string>
    <string name="current_password">Current Password:</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="edit_save">Edit and Save</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_new_password">Confirm New Password:</string>
    <string name="no">No</string>
    <string name="subj">Subject</string>
    <string name="request_title">File a Maintenance Request</string>
    <string name="landlord_edit">Any fields changed will be saved upon hitting "Edit and Save"</string>
    <string name="tenant_edit">Any fields changed will be saved upon hitting "Edit and Save"</string>
    <string name="sure_delete">Are you sure you want to delete this property?</string>
    <string name="add_unit">Add New Unit</string>
    <string name="attached_image">Attached Image:</string>
    <string name="delete_property">Delete Property</string>
    <string name="title_activity_add_property">Add Property</string>
    <string name="add_property_instructions">Please fill out all of the fields to add a property.</string>
    <string name="add_unit_instructions">Please fill out all of the fields to add a unit to your property.</string>
    <string name="title_activity_landlord__edit__info">User Edit Info</string>
    <string name="title_activity_landlord_inbox">Landlord Inbox</string>
    <string name="title_activity_property_page">Property Page</string>
    <string name="title_activity_property_edit_info">Property Edit Info</string>
    <string name="title_activity_add_unit">Add Unit</string>
    <string name="title_activity_unit_page">Unit Page</string>
    <string name="title_activity_read_message">Read Message</string>
    <string name="title_activity_request">Maintenance Request</string>
    <string name="title_activity_tenant__edit__info">Tenant Edit Info</string>
    <string name="title_activity_view_image">ViewImage</string>

</resources>
