<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:background="@color/egg_shell" >
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/ezRentWelcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />
        


    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/log_in_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/log_in_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

    </TableRow>

   <LinearLayout
       android:id="@+id/log_in_table"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
       android:layout_margin="10dp"
       android:layout_weight="1"
       android:background="@drawable/table"
       android:orientation="vertical" >

            <TextView
                android:id="@+id/email_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
            	android:layout_marginTop="30dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textStyle="bold" />

           <EditText
                android:id="@+id/email_editText"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="7dp"
                android:paddingBottom="6dp"
    			android:paddingLeft="10dp"
    			android:paddingRight="10dp"
    			android:paddingTop="6dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textedit"
                android:inputType="textEmailAddress" />
            
            
            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textStyle="bold" />       
        

           <EditText
                android:id="@+id/password_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="10dp"
    			android:paddingLeft="10dp"
    			android:paddingRight="10dp"
    			android:paddingTop="6dp"
            	android:layout_marginTop="7dp"
                android:background="@drawable/textedit"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/login_Button"
                android:layout_width="fill_parent"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button"
		    	android:padding="5dp"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            
	</LinearLayout>

        
        


    <TableRow
        android:id="@+id/register_table"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/register_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_account"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />
    </TableRow>
		
		<LinearLayout
		    android:id="@+id/register_buttom"
	    	android:layout_width="fill_parent"
       	 	android:layout_height="wrap_content"
       	 	android:layout_gravity="center_horizontal|center_vertical"
        	android:orientation="horizontal"
        	android:layout_margin="10dp"
        	android:background="@drawable/table" >
        	
	    	<TextView
            	android:id="@+id/register_message2"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_margin="7dp"
            	android:layout_gravity="center_horizontal|center_vertical"
            	android:text="@string/register_as"
            	android:textAppearance="?android:attr/textAppearanceMedium"
            	android:textColor="@color/black" />
        
		    
		    <Button
           		android:id="@+id/landlord_button"
           		android:layout_gravity="center_horizontal|center_vertical"
            	android:layout_width="wrap_content"
            	android:layout_margin="5dp"
            	android:layout_weight="1"
            	android:layout_height="wrap_content"
            	android:background="@drawable/button"
            	android:padding="2dp"
            	android:text="@string/landlord" />
	   

			<Button
		    	android:id="@+id/tenant_button"
		    	android:layout_gravity="center_horizontal|center_vertical"
		    	android:layout_width="wrap_content"
		    	android:layout_margin="5dp"
		    	android:layout_weight="1"
		    	android:padding="2dp"
		    	android:layout_height="wrap_content"
		    	android:background="@drawable/button"
		    	android:text="@string/tenant" />
		</LinearLayout>
       

</TableLayout>
