<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_popup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@drawable/pop_up"
    android:orientation="vertical"
     >
     <TextView
		android:id="@+id/popup_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/textedit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal|center_vertical"
        android:textStyle="bold"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/sure_delete"
        								 />

    <LinearLayout 
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginRight="15dp"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
   		android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">
        
        <Button
	    	android:id="@+id/property_yes_delete_Button"
	        android:layout_width="wrap_content"
			android:layout_marginRight="15dp"
			android:layout_weight="1"
	        android:layout_marginLeft="15dp"
	        android:background="@drawable/red_button"
	        android:layout_height="wrap_content"
	        android:text="@string/yes" />
    
    	<Button
	    	android:id="@+id/property_no_delete_Button"
	        android:layout_width="wrap_content"
			android:layout_marginRight="15dp"
			android:layout_weight="1"
	        android:layout_marginLeft="15dp"
	        android:background="@drawable/red_button"
	        android:layout_height="wrap_content"
	        android:text="@string/no" />
    
    </LinearLayout>
    
 
</LinearLayout>